--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,8 +46,8 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "com.android.support:appcompat-v7:$support_version"
     implementation "com.android.support:design:$support_version"
     implementation "com.android.support:cardview-v7:$support_version"
@@ -59,17 +59,16 @@ dependencies {
     implementation 'com.google.dagger:dagger:2.11'
     implementation 'org.jetbrains.anko:anko-commons:0.10.4'
     implementation 'org.jetbrains.anko:anko-coroutines:0.10.4'
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.18"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.18'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'android.arch.persistence.room:runtime:1.0.0'
-
     kapt 'android.arch.lifecycle:compiler:1.1.1'
     kapt 'android.arch.persistence.room:compiler:1.0.0'
     kapt 'com.google.dagger:dagger-compiler:2.11'
-
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    implementation project(':BoxedVerticalSeekBarLib')
 }
 
 kotlin {
