--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 27
@@ -54,18 +55,19 @@ dependencies {
     implementation "com.android.support:recyclerview-v7:$support_version"
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'com.google.code.gson:gson:2.8.2'
-    implementation 'co.revely:gradient:1.0.1'
     implementation 'com.mcxiaoke.koi:core:0.5.4'
-    implementation 'com.google.dagger:dagger:2.11'
     implementation 'org.jetbrains.anko:anko-commons:0.10.4'
     implementation 'org.jetbrains.anko:anko-coroutines:0.10.4'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.18'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'android.arch.persistence.room:runtime:1.0.0'
     implementation 'lib.kingja.switchbutton:switchbutton:1.1.6'
+
+    implementation 'com.google.firebase:firebase-core:15.0.0'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.1'
+
     kapt 'android.arch.lifecycle:compiler:1.1.1'
     kapt 'android.arch.persistence.room:compiler:1.0.0'
-    kapt 'com.google.dagger:dagger-compiler:2.11'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
@@ -77,3 +79,5 @@ kotlin {
         coroutines "enable"
     }
 }
+
+apply plugin: 'com.google.gms.google-services'
