--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.github.naz013.tasker">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".arch.TaskerApp"
         android:allowBackup="true"
@@ -12,9 +14,9 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="portrait">
-        </activity>
-        <activity android:name=".SplashScreenActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".SplashScreenActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,5 +25,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
