--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,17 @@ dependencies {
     implementation 'android.arch.persistence.room:runtime:1.1.1'
     implementation 'lib.kingja.switchbutton:switchbutton:1.1.6'
 
+    implementation('com.google.api-client:google-api-client-android:1.23.0') {
+        exclude module: 'httpclient'
+    }
+    implementation('com.google.apis:google-api-services-drive:v3-rev117-1.23.0') {
+        exclude module: 'httpclient'
+    }
+    implementation('com.google.http-client:google-http-client-gson:1.23.0') {
+        exclude module: 'httpclient'
+    }
+
+    implementation 'com.google.android.gms:play-services-auth:15.0.1'
     implementation 'com.google.firebase:firebase-core:16.0.1'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.4'
 
