--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
         maven {
             url 'https://maven.fabric.io/public'
         }
@@ -25,6 +26,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
         maven { url 'https://jitpack.io' }
     }
 }
