--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'androidx.navigation.safeargs'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'io.fabric'
 
@@ -72,6 +73,7 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.0.0"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.code.gson:gson:2.8.4'
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 
     implementation 'com.mcxiaoke.koi:core:0.5.5'
     implementation 'org.jetbrains.anko:anko-commons:0.10.4'
@@ -102,6 +104,9 @@ dependencies {
     kapt 'androidx.lifecycle:lifecycle-compiler:2.0.0'
     kapt 'androidx.room:room-compiler:2.0.0'
     implementation project(':BoxedVerticalSeekBarLib')
+
+    implementation "android.arch.navigation:navigation-fragment-ktx:1.0.0-beta01"
+    implementation "android.arch.navigation:navigation-ui-ktx:1.0.0-beta01"
 }
 
 kotlin {
