--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.2.0'
         classpath 'io.fabric.tools:gradle:1.27.1'
+        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-beta01"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
