--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,14 @@ android {
         versionName "1.0.8"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    signingConfigs {
+        app {
+            storeFile file('release_key.jks')
+            storePassword 'myday25042018'
+            keyAlias 'com.github.naz013.tasker'
+            keyPassword 'myday25042018'
+        }
+    }
     lintOptions {
         abortOnError false
         checkReleaseBuilds false
@@ -28,6 +36,7 @@ android {
             minifyEnabled true
             debuggable false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.app
             applicationVariants.all { variant ->
                 variant.outputs.all {
                     def formattedDate = new Date().format('yyyy-MM-dd')
@@ -37,6 +46,9 @@ android {
                     outputFileName = newName
                 }
             }
+        }
+        debug {
+            signingConfig signingConfigs.app
         }
     }
     packagingOptions {
@@ -65,8 +77,8 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    kapt 'com.android.tools.build.jetifier:jetifier-core:1.0.0-beta02'
-    annotationProcessor 'com.android.tools.build.jetifier:jetifier-core:1.0.0-beta02'
+    kapt 'com.android.tools.build.jetifier:jetifier-core:1.0.0-beta03'
+    annotationProcessor 'com.android.tools.build.jetifier:jetifier-core:1.0.0-beta03'
     implementation "androidx.appcompat:appcompat:1.0.2"
     implementation "com.google.android.material:material:1.1.0-alpha03"
     implementation "androidx.cardview:cardview:1.0.0"
