--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,10 +69,10 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    kapt 'com.android.tools.build.jetifier:jetifier-core:1.0.0-beta03'
-    annotationProcessor 'com.android.tools.build.jetifier:jetifier-core:1.0.0-beta03'
+    kapt 'com.android.tools.build.jetifier:jetifier-core:1.0.0-beta04'
+    annotationProcessor 'com.android.tools.build.jetifier:jetifier-core:1.0.0-beta04'
     implementation "androidx.appcompat:appcompat:1.0.2"
-    implementation "com.google.android.material:material:1.1.0-alpha03"
+    implementation "com.google.android.material:material:1.1.0-alpha04"
     implementation "androidx.cardview:cardview:1.0.0"
     implementation "androidx.recyclerview:recyclerview:1.0.0"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -109,8 +109,8 @@ dependencies {
     kapt 'androidx.room:room-compiler:2.0.0'
     implementation project(':BoxedVerticalSeekBarLib')
 
-    implementation "android.arch.navigation:navigation-fragment-ktx:1.0.0-beta02"
-    implementation "android.arch.navigation:navigation-ui-ktx:1.0.0-beta02"
+    implementation "android.arch.navigation:navigation-fragment-ktx:1.0.0-rc02"
+    implementation "android.arch.navigation:navigation-ui-ktx:1.0.0-rc02"
 }
 
 kotlin {
