--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,6 @@
 
 buildscript {
     ext.kotlin_version = '1.3.21'
-    ext.gms_version = '15.0.0'
     repositories {
         google()
         jcenter()
@@ -16,7 +15,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.2.0'
         classpath 'io.fabric.tools:gradle:1.27.1'
-        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-beta01"
+        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-rc02"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
