--- a/build.gradle
+++ b/build.gradle
@@ -11,11 +11,11 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.1'
+        classpath 'com.android.tools.build:gradle:3.3.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.2.0'
         classpath 'io.fabric.tools:gradle:1.27.1'
-        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-rc02"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.0.0-rc02"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
