--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "com.github.naz013.tasker"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 15
-        versionName "1.0.11"
+        versionCode 16
+        versionName "1.0.12"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     signingConfigs {
@@ -72,7 +72,7 @@ dependencies {
     kapt 'com.android.tools.build.jetifier:jetifier-core:1.0.0-beta04'
     annotationProcessor 'com.android.tools.build.jetifier:jetifier-core:1.0.0-beta04'
     implementation "androidx.appcompat:appcompat:1.0.2"
-    implementation "com.google.android.material:material:1.1.0-alpha04"
+    implementation "com.google.android.material:material:1.1.0-alpha05"
     implementation "androidx.cardview:cardview:1.0.0"
     implementation "androidx.recyclerview:recyclerview:1.0.0"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -109,8 +109,8 @@ dependencies {
     kapt 'androidx.room:room-compiler:2.0.0'
     implementation project(':BoxedVerticalSeekBarLib')
 
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.0.0-rc02'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.0.0-rc02'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.0.0'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.0.0'
 }
 
 kotlin {
