Update gradle. Code clean up.

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,4 +16,4 @@ android.enableJetifier = true
 #android.debug.obsoleteApi=true
 android.enableR8 = true
 android.databinding.enableV2=true
-#android.enableR8.fullMode=true
+android.enableR8.fullMode=true
